FEAT: (#53) startPointId로 본인 여부 플래그 추가 및 본인 데이터를 0번째 인덱스로 반환한다